bugfix: correct text scaling on mobile devices

--- a/assets/sass/components/_root.scss
+++ b/assets/sass/components/_root.scss
@@ -3,6 +3,7 @@
  * Default values are specified in lib/config.php
  */
 :root {
+  --ui-scale: 100%;
   --primary-color: transparent;
   --primary-light-color: transparent;
   --warning-color: #ffc107;
